Lot of cleaning in javadoc plus some improvement in generics usage, old comments suppression, deprecated methods replacement